--- a/LinkyMVC/Views/Shared/Error.cshtml
+++ b/LinkyMVC/Views/Shared/Error.cshtml
@@ -6,4 +6,5 @@
 
 <h1 class="text-danger">Błąd.</h1>
 <h2 class="text-danger">Wystąpił błąd podczas przetwarzania żądania.</h2>
+@ViewBag.ErrorMessage
 
