--- a/LinkyMVC/Views/Links/Details.cshtml
+++ b/LinkyMVC/Views/Links/Details.cshtml
@@ -56,3 +56,32 @@
     @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
     @Html.ActionLink("Back to List", "Index")
 </p>
+
+<div id="countryChart" style="height: 370px; width: 100%;"></div>
+
+@section scripts
+{
+    <script>
+    window.onload = function () {
+
+        var countryChart = new CanvasJS.Chart("countryChart", {
+            theme: "light2",
+            exportEnabled: true,
+            animationEnabled: true,
+            title: {
+                text: "Clicks by country"
+            },
+            data: [{
+                type: "pie",
+                startAngle: 90,
+                toolTipContent: "<b>{label}</b>: {y}",
+                showInLegend: "true",
+                legendText: "{label}",
+                indexLabel: "{label} - {y}",
+                dataPoints: @Html.Raw(ViewBag.CountryData)
+	        }]
+        });
+        countryChart.render();
+    }
+    </script>   
+}
