--- a/LinkyMVC/Views/Links/Details.cshtml
+++ b/LinkyMVC/Views/Links/Details.cshtml
@@ -4,69 +4,73 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<div class="row" style="margin-top: 2rem;">
+    <div class="panel panel-primary col-md-8 col-md-offset-2">
+        <div class="panel-body row">
+            <div class="col-sm-6">
+                <h2>Link statistics</h2>
+                <p>
+                    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
+                    @Html.ActionLink("Back to List", "Index")
+                </p>
+                <hr />
+                <dl class="dl-horizontal">
+                    <dt>
+                        Label:
+                    </dt>
 
-<div class="row">
-    <div class="col-md-8">
-        <div>
-            <h4>Link</h4>
-            <hr />
-            <dl class="dl-horizontal">
-                <dt>
-                    @Html.DisplayNameFor(model => model.ApplicationUser.Email)
-                </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Label)
+                    </dd>
 
-                <dd>
-                    @Html.DisplayFor(model => model.ApplicationUser.Email)
-                </dd>
+                    <dt>
+                        Destination:
+                    </dt>
 
-                <dt>
-                    @Html.DisplayNameFor(model => model.Label)
-                </dt>
+                    <dd>
+                        <a id="destination" href="@Model.URL">@Html.DisplayFor(model => model.URL)</a>
+                    </dd>
 
-                <dd>
-                    @Html.DisplayFor(model => model.Label)
-                </dd>
+                    <dt>
+                        Clicks:
+                    </dt>
 
-                <dt>
-                    @Html.DisplayNameFor(model => model.URL)
-                </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.Clicks)
+                    </dd>
 
-                <dd>
-                    @Html.DisplayFor(model => model.URL)
-                </dd>
+                    <dt>
+                        Created at:
+                    </dt>
 
-                <dt>
-                    @Html.DisplayNameFor(model => model.Clicks)
-                </dt>
+                    <dd>
+                        @Html.DisplayFor(model => model.CreatedAt)
+                    </dd>
 
-                <dd>
-                    @Html.DisplayFor(model => model.Clicks)
-                </dd>
-
-                <dt>
-                    @Html.DisplayNameFor(model => model.CreatedAt)
-                </dt>
-
-                <dd>
-                    @Html.DisplayFor(model => model.CreatedAt)
-                </dd>
-
-            </dl>
+                </dl>
+            </div>
+            <div id="qrCode" class="col-sm-6"></div>
         </div>
-        <p>
-            @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-            @Html.ActionLink("Back to List", "Index")
-        </p>
     </div>
-
-    <div id="qrCode" class="col-md-4"></div>
 </div>
 
 @if (Model.Clicks > 0)
 {
-    <div id="countryChart" style="height: 370px; width: 100%;"></div>
-    <div id="dailyChart" style="height: 370px; width: 100%;"></div>
+    <div class="panel panel-primary">
+        <div class="panel-body">
+            <div id="countryChart" class="chart center-block"></div>
+        </div>
+    </div>
+
+    <div class="panel panel-primary">
+        <div class="panel-body">
+            <div id="dailyChart" class="chart center-block"></div>
+        </div>
+    </div>
+}
+else
+{
+    <p>No clicks so far.</p>
 }
 
 @section scripts
@@ -99,9 +103,10 @@
 
         var dailyChart = new CanvasJS.Chart("dailyChart", {
             theme: "light2",
+            exportEnabled: true,
 	        animationEnabled: true,
 	        title: {
-		        text: "Number of clicks by day"
+		        text: "Clicks per day"
 	        },
 	        axisX: {
                 valueFormatString: "DD MMM",
