--- a/LinkyMVC/Content/Site.css
+++ b/LinkyMVC/Content/Site.css
@@ -22,3 +22,98 @@ select,
 textarea {
     max-width: 280px;
 }
+
+.navbar {
+    background: #ffffff;
+    height: 60px;
+}
+
+footer {
+    position: fixed;
+    left: 0;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;
+}
+
+.rectangle {
+    height: 250px;
+    width: 100%;
+    background-color: #555;
+    position: relative;
+}
+
+.rectangle2 {
+    height: 450px;
+    width: 100%;
+    background-color: #555;
+    position: relative;
+}
+
+.elipse {
+    height: 150px;
+    width: 100%;
+    background-color: #555;
+    border-radius: 0 0 50% 50%;
+    align-content:center;
+}
+
+.dotted {
+    border-top: 1px dashed #681879;
+}
+
+.line {
+   position:fixed;
+   left:0;
+   bottom:0;
+   width:100%;
+}
+
+.scissors {
+    width: 50px;
+    height: 50px;
+}
+
+.coldescription {
+    margin-top: 100px;
+}
+
+.center {
+    padding: 10px;
+    position: absolute;
+    left: 40%;
+    top: 40%;
+}
+
+.row {
+    margin-right: 0;
+    margin-left: 0;
+}
+
+.linkycolor {
+    color:  #681879;
+}
+
+.linkybtn {
+    background-color:#681879;
+    color:white;
+}
+
+.centerbutton{
+    position:absolute;
+    left:45%;
+    top:35%;
+}
+
+.btn-size {
+    width: 150px;
+    height: 50px;
+}
+
+.startButton {
+    background: black;
+    display: block;
+    width: 150px;
+    height: 150px;
+    text-indent: -9999px; /* hides the link text */
+}
