--- a/LinkyMVC/Views/Home/Index.cshtml
+++ b/LinkyMVC/Views/Home/Index.cshtml
@@ -2,30 +2,45 @@
     ViewBag.Title = "Home Page";
 }
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+<div class="rectangle">
+    <div class="center">
+        <img src="~/logo.png" width="400px" />
+    </div>
+    
+</div>
+<div class="elipse">
+    <div class="centerbutton">
+
+        @Html.ActionLink("Start Now!", "Login", "Account", routeValues: null, htmlAttributes: new { @class = "btn btn-default linkybtn btn-size", id = "loginLink", })
+    </div>
 </div>
 
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+<section class="mt-5 coldescription">
+    <div class="container">
+        <div id="features" class="row text-center">
+            <div class="col-lg-4 mb-4">
+                <i class="fas fa-dollar-sign text-primary fa-10x linkycolor" ></i>
+                <h2 class="mt-3">Free</h2>
+                <p>
+                    Use the site for free. Always and everywhere!
+                </p>
+            </div>
+
+            <div class="col-lg-4 mb-4">
+                <i class="fas fa-hand-point-up text-primary fa-10x linkycolor" ></i>
+                <h2 class="mt-3">Easy to use</h2>
+                <p>
+                    Reach your goal in a few simple steps
+                </p>
+            </div>
+
+            <div class="col-lg-4 mb-4">
+                <i class="fas fa-chart-pie text-primary fa-10x linkycolor" ></i>
+                <h2 class="mt-3">Statistics</h2>
+                <p>
+                    Learn more about the users clicking on the links
+                </p>
+            </div>
+        </div>
     </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
+</section>
