--- a/LinkyMVC/Views/Links/Delete.cshtml
+++ b/LinkyMVC/Views/Links/Delete.cshtml
@@ -3,62 +3,64 @@
 @{
     ViewBag.Title = "Delete";
 }
+<div class="container body-content">
+    <h2>Delete</h2>
 
-<h2>Delete</h2>
+    <h3>Are you sure you want to delete this?</h3>
+    <div>
+        <h4>Link</h4>
+        <hr />
+        <dl class="dl-horizontal">
+            <dt>
+                @Html.DisplayNameFor(model => model.ApplicationUser.Email)
+            </dt>
 
-<h3>Are you sure you want to delete this?</h3>
-<div>
-    <h4>Link</h4>
-    <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.ApplicationUser.Email)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.ApplicationUser.Email)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.ApplicationUser.Email)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Label)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Label)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Label)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Label)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.URL)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.URL)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.URL)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.URL)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.Clicks)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.Clicks)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.Clicks)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.Clicks)
-        </dd>
+            <dt>
+                @Html.DisplayNameFor(model => model.CreatedAt)
+            </dt>
 
-        <dt>
-            @Html.DisplayNameFor(model => model.CreatedAt)
-        </dt>
+            <dd>
+                @Html.DisplayFor(model => model.CreatedAt)
+            </dd>
 
-        <dd>
-            @Html.DisplayFor(model => model.CreatedAt)
-        </dd>
+        </dl>
 
-    </dl>
+        @using (Html.BeginForm())
+        {
+            @Html.AntiForgeryToken()
 
-    @using (Html.BeginForm()) {
-        @Html.AntiForgeryToken()
-
-        <div class="form-actions no-color">
-            <input type="submit" value="Delete" class="btn btn-default" /> |
-            @Html.ActionLink("Back to List", "Index")
-        </div>
-    }
+            <div class="form-actions no-color">
+                <input type="submit" value="Delete" class="btn btn-default" /> |
+                @Html.ActionLink("Back to List", "Index")
+            </div>
+        }
+    </div>
 </div>
