--- a/LinkyMVC/Views/Links/Details.cshtml
+++ b/LinkyMVC/Views/Links/Details.cshtml
@@ -3,83 +3,82 @@
 @{
     ViewBag.Title = "Details";
 }
+<div class="container body-content">
+    <div class="row" style="margin-top: 2rem;">
+        <div class="panel panel-primary col-md-8 col-md-offset-2 linkycolor" style=" border-color: #681879">
+            <div class="panel-body row">
+                <div class="col-sm-6">
+                    <h2>Link statistics</h2>
+                    <div class="btn-group" role="group" aria-label="...">
+                        <a href="@Url.Action("Index")" class="btn btn-danger">Back to list</a>
+                        <a href="@Url.Action("Edit", new { id = Model.Id })" class="btn btn-warning">Edit</a>
+                    </div>
+                        <hr />
+                        <dl class="dl-horizontal">
+                            <dt>
+                                Label:
+                            </dt>
 
-<div class="row" style="margin-top: 2rem;">
-    <div class="panel panel-primary col-md-8 col-md-offset-2">
-        <div class="panel-body row">
-            <div class="col-sm-6">
-                <h2>Link statistics</h2>
-                <p>
-                    @Html.ActionLink("Edit", "Edit", new { id = Model.Id }) |
-                    @Html.ActionLink("Back to List", "Index")
-                </p>
-                <hr />
-                <dl class="dl-horizontal">
-                    <dt>
-                        Label:
-                    </dt>
+                            <dd>
+                                @Html.DisplayFor(model => model.Label)
+                            </dd>
 
-                    <dd>
-                        @Html.DisplayFor(model => model.Label)
-                    </dd>
+                            <dt>
+                                Destination:
+                            </dt>
 
-                    <dt>
-                        Destination:
-                    </dt>
+                            <dd>
+                                <a id="destination" href="@Model.URL">@Html.DisplayFor(model => model.URL)</a>
+                            </dd>
 
-                    <dd>
-                        <a id="destination" href="@Model.URL">@Html.DisplayFor(model => model.URL)</a>
-                    </dd>
+                            <dt>
+                                Clicks:
+                            </dt>
 
-                    <dt>
-                        Clicks:
-                    </dt>
+                            <dd>
+                                @Html.DisplayFor(model => model.Clicks)
+                            </dd>
 
-                    <dd>
-                        @Html.DisplayFor(model => model.Clicks)
-                    </dd>
+                            <dt>
+                                Created at:
+                            </dt>
 
-                    <dt>
-                        Created at:
-                    </dt>
+                            <dd>
+                                @Html.DisplayFor(model => model.CreatedAt)
+                            </dd>
 
-                    <dd>
-                        @Html.DisplayFor(model => model.CreatedAt)
-                    </dd>
-
-                </dl>
+                        </dl>
+                    </div>
+                <div id="qrCode" class="col-sm-6"></div>
             </div>
-            <div id="qrCode" class="col-sm-6"></div>
         </div>
     </div>
-</div>
-
-@if (Model.Clicks > 0)
-{
-    <div class="panel panel-primary">
-        <div class="panel-body">
-            <div id="countryChart" class="chart center-block"></div>
+    @if (Model.Clicks > 0)
+    {
+        <div class="panel panel-primary linkycolor" style=" border-color: #681879">
+            <div class="panel-body">
+                <div id="countryChart" class="chart center-block linkycolor"></div>
+            </div>
         </div>
-    </div>
 
-    <div class="panel panel-primary">
-        <div class="panel-body">
-            <div id="dailyChart" class="chart center-block"></div>
+        <div class="panel panel-primary linkycolor" style=" border-color: #681879">
+            <div class="panel-body">
+                <div id="dailyChart" class="chart center-block linkycolor"></div>
+            </div>
         </div>
-    </div>
-}
-else
-{
-    <p>No clicks so far.</p>
-}
+    }
+    else
+    {
+        <p>No clicks so far.</p>
+    }
 
-@section scripts
+    @section scripts
 {
-    @Scripts.Render("~/bundles/qrcode")
-    <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
+        @Scripts.Render("~/bundles/qrcode")
+        <script src="https://canvasjs.com/assets/script/canvasjs.min.js"></script>
 
-    <!-- Statistics -->
-    <script>
+        <!-- Statistics -->
+        <script>
     window.onload = function () {
 
         var countryChart = new CanvasJS.Chart("countryChart", {
@@ -125,10 +124,11 @@ else
         });
         dailyChart.render();
     }
-    </script>
+        </script>
 
-    <!-- QR -->
-    <script>
+        <!-- QR -->
+        <script>
         new QRCode("qrCode", "@Model.URL");
-    </script>
-}
+        </script>
+    }
+</div>
