--- a/LinkyMVC/Views/Shared/_Layout.cshtml
+++ b/LinkyMVC/Views/Shared/_Layout.cshtml
@@ -1,40 +1,55 @@
 ﻿<!DOCTYPE html>
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
+    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Linky - friendly link companion</title>
+    <script src="https://kit.fontawesome.com/cb9c594335.js" crossorigin="anonymous"></script>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 
+
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                @Html.ActionLink("Nazwa aplikacji", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+    <nav class="navbar navbar-default navbar-fixed-top">
+        <div class="container-fluid">
+
+    <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/"><img src="~/logo.png" width="90px" /></a>
+    </div>
+
+
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+        <ul class="nav navbar-nav linkycolor">
+            <li class="linkycolor">@Html.ActionLink("Home", "Index", "Home")</li>
+            <li class="linkycolor">@Html.ActionLink("About", "About", "Home")</li>
+            <li class="linkycolor">@Html.ActionLink("Links", "Index", "Links")</li>
+        </ul>
+        @Html.Partial("_LoginPartial")
+    </div>
+    </div>
+    </nav>
+    <!-- Options -->
+   
+    <div>
+        @RenderBody()
+        <div class="row line">
+            <div class="col-md-11">
+               <hr  class="dotted"/>
             </div>
-            <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("Strona główna", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Informacje", "About", "Home")</li>
-                    <li>@Html.ActionLink("Linki", "Index", "Links")</li>
-                </ul>
-                @Html.Partial("_LoginPartial")
+            <div class="col-md-1">
+                <i class="far fa-hand-scissors text-primary fa-3x linkycolor" ></i>
             </div>
         </div>
-    </div>
-    <div class="container body-content">
-        @RenderBody()
-        <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Moja aplikacja ASP.NET</p>
+            <p style="margin-left: 30px">&copy; @DateTime.Now.Year - Projekt TNAI</p>
         </footer>
     </div>
 
