--- a/LinkyMVC/Views/Links/Create.cshtml
+++ b/LinkyMVC/Views/Links/Create.cshtml
@@ -18,15 +18,21 @@
             @ViewBag.ErrorMessage
             <div class="form-group">
                 @Html.LabelFor(model => model.Label, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
-                    @Html.EditorFor(model => model.Label, new { htmlAttributes = new { @class = "form-control" } })
+                <div class="col-md-3">
+                    @Html.EditorFor(model => model.Label, new { htmlAttributes = new { @class = "form-control", id = "linkName" } })
                     @Html.ValidationMessageFor(model => model.Label, "", new { @class = "text-danger" })
                 </div>
+                <span class="input-group-btn col-md-2">
+                    <button id="clickMe" class="btn btn-default linkybtn"  onclick="genRand();" ><i class="fas fa-dice"></i></button>
+                </span>
+                <span class="input-group-btn col-md-5">
+
+                </span>
             </div>
 
             <div class="form-group">
                 @Html.LabelFor(model => model.URL, htmlAttributes: new { @class = "control-label col-md-2" })
-                <div class="col-md-10">
+                <div class="col-md-3">
                     @Html.EditorFor(model => model.URL, new { htmlAttributes = new { @class = "form-control" } })
                     @Html.ValidationMessageFor(model => model.URL, "", new { @class = "text-danger" })
                 </div>
@@ -40,11 +46,20 @@
         </div>
     }
 
-    <div>
-        @Html.ActionLink("Back to List", "Index")
-    </div>
+<div>
+    @Html.ActionLink("Back to List", "Index", null, htmlAttributes: new { @class = "btn btn-danger" })
+</div>
 
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
+    <script>
+        function genRand() {
+            var tmp = "";
+            var availChars = "qwertyuiopasdfghjklzxcvbnmQWERTYUIOPASDFGHJKLZXCVBNM1234567890";
+            for (var i = 0; i < 6; i++)
+                tmp += availChars.charAt(Math.floor(Math.random() * availChars.length));
+            document.getElementById("linkName").value = tmp;
+        }
+        </script>
     }
 </div>
