--- a/LinkyMVC/Views/Links/Index.cshtml
+++ b/LinkyMVC/Views/Links/Index.cshtml
@@ -32,7 +32,7 @@
                     @Html.DisplayFor(modelItem => item.Label)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.URL)
+                    @Html.DisplayFor(modelIem => item.URL)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.Clicks)
