Losowanie etykiety przy wczytaniu widoku Links/Create

--- a/LinkyMVC/Views/Links/Create.cshtml
+++ b/LinkyMVC/Views/Links/Create.cshtml
@@ -60,6 +60,8 @@
                 tmp += availChars.charAt(Math.floor(Math.random() * availChars.length));
             document.getElementById("linkName").value = tmp;
         }
+
+        window.onload = genRand;
         </script>
     }
 </div>
