--- a/LinkyMVC/Views/Shared/_Layout.cshtml
+++ b/LinkyMVC/Views/Shared/_Layout.cshtml
@@ -29,7 +29,7 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav linkycolor">
             <li class="linkycolor">@Html.ActionLink("Home", "Index", "Home")</li>
-            <li class="linkycolor">@Html.ActionLink("About", "About", "Home")</li>
+            <li class="linkycolor">@Html.ActionLink("Contact", "Contact", "Home")</li>
             <li class="linkycolor">@Html.ActionLink("Links", "Index", "Links")</li>
         </ul>
         @Html.Partial("_LoginPartial")
