--- a/LinkyMVC/Views/Links/Index.cshtml
+++ b/LinkyMVC/Views/Links/Index.cshtml
@@ -31,7 +31,7 @@
                 <td>
                     <a href="/@item.Label">@Url.Action("Index", "Home", null, "https")@item.Label</a>
                 </td>
-                <td>
+                <td style="width: 500px">
                     <a href="@item.URL">@Html.DisplayFor(modelIem => item.URL)</a>
                 </td>
                 <td>
