--- a/LinkyMVC/Views/Account/Login.cshtml
+++ b/LinkyMVC/Views/Account/Login.cshtml
@@ -7,7 +7,7 @@
 
 
 
-<div class="row" style="background: #555;">
+<div class="container body-content">
     <div style="margin: 0 30% 0 30%">
         <h2>@ViewBag.Title.</h2>
         <div class="col-md-12">
@@ -49,15 +49,15 @@
                         @Html.ActionLink("Zarejestruj się jako nowy użytkownik", "Register")
                     </p>
                     @* Włącz ten element po włączeniu potwierdzenia konta dla funkcji resetowania hasła
-                    <p>
-                        @Html.ActionLink("Nie pamiętasz hasła?", "ForgotPassword")
-                    </p>*@
+                        <p>
+                            @Html.ActionLink("Nie pamiętasz hasła?", "ForgotPassword")
+                        </p>*@
                 }
             </section>
         </div>
     </div>
 </div>
-<div class="elipse">
+
 
     @section Scripts {
         @Scripts.Render("~/bundles/jqueryval")
