--- a/LinkyMVC/Views/Account/Register.cshtml
+++ b/LinkyMVC/Views/Account/Register.cshtml
@@ -1,6 +1,6 @@
 ﻿@model LinkyMVC.Models.RegisterViewModel
 @{
-    ViewBag.Title = "Zarejestruj";
+    ViewBag.Title = "Register";
 }
 
 <div class="container body-content">
@@ -9,7 +9,7 @@
     @using (Html.BeginForm("Register", "Account", FormMethod.Post, new { @class = "form-horizontal", role = "form" }))
     {
         @Html.AntiForgeryToken()
-        <h4>Utwórz nowe konto.</h4>
+        <h4>Create new account.</h4>
         <hr />
         @Html.ValidationSummary("", new { @class = "text-danger" })
         <div class="form-group">
@@ -32,7 +32,7 @@
         </div>
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
-                <input type="submit" class="btn btn-default" value="Zarejestruj" />
+                <input type="submit" class="btn btn-default linkybtn" value="Zarejestruj" />
             </div>
         </div>
     }
