--- a/LinkyMVC/Views/Home/Index.cshtml
+++ b/LinkyMVC/Views/Home/Index.cshtml
@@ -12,7 +12,7 @@
     <div class="centerbutton">
         @if (Request.IsAuthenticated)
         {
-            @Html.ActionLink("Start Now!", "Index", "Links")
+            @Html.ActionLink("Start Now!", "Index", "Links", routeValues: null, htmlAttributes: new { @class = "btn btn-default linkybtn btn-size"})
         }
         else
         {
